--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -101,107 +101,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "e8ac0a73",
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.email_security_copilot.features.features import EmailFeatureClass\n",
-    "df = EmailFeatureClass()(df)"
+    "features_df = EmailFeatureClass()(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "081fff21",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "EmailFeatureClass(subject_col=                                        file  \\\n",
-       "0     00001.317e78fa8ee2f54cd4890fdc09ba8176   \n",
-       "1     00002.9438920e9a55591b18e60d1ed37d992b   \n",
-       "2     00003.590eff932f8704d8b0fcbe69d023b54d   \n",
-       "3     00004.bdcc075fa4beb5157b5dd6cd41d8887b   \n",
-       "4     00005.ed0aba4d386c5e62bc737cf3f0ed9589   \n",
-       "...                                      ...   \n",
-       "3943   2547.18ce2b2d4f757e70154b5c8cfe6e684f   \n",
-       "3944   2548.b2259f104edd1ecbc9dc0327df387147   \n",
-       "3945   2549.d05fe143eb28d1fb19fbdc39781d5e34   \n",
-       "3946   2550.963956a866a2e00b3d5b353ecc9216ae   \n",
-       "3947   2551.3b1f94418de5bd544c977b44bcc7e740   \n",
-       "\n",
-       "                                    sender               recipient cc  num_cc  \\\n",
-       "0     Start Now <startnow2002@hotmail.com>           ilug@linux.ie          0   \n",
-       "1                      lmrn@mailexcite.com  ranmoore@cybertime.net          0   \n",
-       "2                  amknight@mailexcite.com       cbmark@cbmark.com          0   \n",
-       "3                  jordan23@mailexcite.com     ranmoore@swbell.net          0   \n",
-       "4                        yyyy@pluriproj.pt       yyyy@pluriproj.pt          0   \n",
-       "...                                    ...                     ... ..     ...   \n",
-       "3943   newscientist <rssfeeds@example.com>        yyyy@example.com          0   \n",
-       "3944       guardian <rssfeeds@example.com>        yyyy@example.com          0   \n",
-       "3945   newscientist <rssfeeds@example.com>        yyyy@example.com          0   \n",
-       "3946       guardian <rssfeeds@example.com>        yyyy@example.com          0   \n",
-       "3947   newscientist <rssfeeds@example.com>        yyyy@example.com          0   \n",
-       "\n",
-       "                                                subject  \\\n",
-       "0                          [ILUG] STOP THE MLM INSANITY   \n",
-       "1     Real Protection, Stun Guns!  Free Shipping! Ti...   \n",
-       "2     New Improved Fat Burners, Now With TV Fat Abso...   \n",
-       "3     New Improved Fat Burners, Now With TV Fat Abso...   \n",
-       "4     Never Repay Cash Grants, $500 - $50,000, Secre...   \n",
-       "...                                                 ...   \n",
-       "3943             Gene technique reveals human evolution   \n",
-       "3944                   Go-ahead for new-style hospitals   \n",
-       "3945            Malicious code hidden in email software   \n",
-       "3946                 'Flexible' retirement gains ground   \n",
-       "3947             Critical US satellites could be hacked   \n",
-       "\n",
-       "                                                content  num_hops label  \n",
-       "0     Greetings!\\n\\nYou are receiving this letter be...         6  spam  \n",
-       "1     The Need For Safety Is Real In 2002, You Might...         3  spam  \n",
-       "2     *****Bonus Fat Absorbers As Seen On TV, Includ...         3  spam  \n",
-       "3     *****Bonus Fat Absorbers As Seen On TV, Includ...         4  spam  \n",
-       "4     Government Grants E-Book 2002\\nedition, Just $...         4  spam  \n",
-       "...                                                 ...       ...   ...  \n",
-       "3943  URL: http://www.newsisfree.com/click/-3,871436...         3   ham  \n",
-       "3944  URL: http://www.newsisfree.com/click/-4,872399...         3   ham  \n",
-       "3945  URL: http://www.newsisfree.com/click/-3,871080...         3   ham  \n",
-       "3946  URL: http://www.newsisfree.com/click/-4,872400...         3   ham  \n",
-       "3947  URL: http://www.newsisfree.com/click/-3,870882...         3   ham  \n",
-       "\n",
-       "[3948 rows x 9 columns], content_col='content', cols=('num_cc', 'num_hops', 'subject_len', 'content_len', 'has_link'))"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "features_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "id": "6e263ad4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'pooh3285@netnotify.com, pooh328@netnotify.com, pooh329@netnotify.com, pooh32@netnotify.com, pooh3302@netnotify.com, elwood@netnotify.com, joan@netnotify.com, mark@netnotify.com, rody@netnotify.com, nanook@netnotify.com, janetk@netnotify.com, gerard@netnotify.com, nsg@netnotify.com, mels@netnotify.com, jm7@netnotify.com'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df[df.cc!=\"\"].iloc[0].cc"
+    "cols = ['sender', 'recipient', 'num_cc', 'subject', 'content', \n",
+    "        'subject_len', 'content_len', 'has_link', 'num_hops', 'label']\n",
+    "raw_df = features_df[cols]"
    ]
   },
   {
@@ -220,21 +138,21 @@
     }
    ],
    "source": [
-    "df[\"text_raw\"] = df.apply(combine_subject_content, axis=1)\n",
+    "# df[\"text_raw\"] = df.apply(combine_subject_content, axis=1)\n",
     "\n",
-    "pre = TextPreprocessor(cfg)\n",
-    "df[\"text_raw_clean\"] = df[\"text_raw\"].fillna(\"\").map(pre)\n",
+    "# pre = TextPreprocessor(cfg)\n",
+    "# df[\"text_raw_clean\"] = df[\"text_raw\"].fillna(\"\").map(pre)\n",
     "\n",
-    "assert df[\"text_raw_clean\"].isna().sum() == 0, \"NaNs in cleaned content\"\n",
-    "non_empty_rate = (df[\"text_raw_clean\"].str.len() > 0).mean()\n",
-    "print(f\"Cleaned text — non-empty rate: {non_empty_rate:.2%}\")\n",
+    "# assert df[\"text_raw_clean\"].isna().sum() == 0, \"NaNs in cleaned content\"\n",
+    "# non_empty_rate = (df[\"text_raw_clean\"].str.len() > 0).mean()\n",
+    "# print(f\"Cleaned text — non-empty rate: {non_empty_rate:.2%}\")\n",
     "\n",
-    "df_clean = df[[\"text_raw_clean\", \"label\"]].copy()"
+    "# df_clean = df[[\"text_raw_clean\", \"label\"]].copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "1f4262cd",
    "metadata": {},
    "outputs": [
@@ -250,16 +168,16 @@
     }
    ],
    "source": [
-    "llm_dataset = SpamFrameDataset(\n",
-    "    df=df_clean,\n",
-    "    cfg=cfg,\n",
-    ")\n",
-    "len(llm_dataset), llm_dataset[0].keys()"
+    "# llm_dataset = SpamFrameDataset(\n",
+    "#     df=df_clean,\n",
+    "#     cfg=cfg,\n",
+    "# )\n",
+    "# len(llm_dataset), llm_dataset[0].keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "46ac8610",
    "metadata": {},
    "outputs": [
@@ -272,15 +190,15 @@
     }
    ],
    "source": [
-    "from src.utils import combine_subject_content\n",
-    "df[\"text_raw\"] = df.apply(combine_subject_content, axis=1)\n",
+    "# from src.utils import combine_subject_content\n",
+    "# df[\"text_raw\"] = df.apply(combine_subject_content, axis=1)\n",
     "\n",
-    "pre = TextPreprocessor(cfg)\n",
-    "df[\"text_raw_clean\"] = df[\"text_raw\"].fillna(\"\").map(pre)\n",
+    "# pre = TextPreprocessor(cfg)\n",
+    "# df[\"text_raw_clean\"] = df[\"text_raw\"].fillna(\"\").map(pre)\n",
     "\n",
-    "assert df[\"text_raw_clean\"].isna().sum() == 0, \"NaNs in cleaned content\"\n",
-    "non_empty_rate = (df[\"text_raw_clean\"].str.len() > 0).mean()\n",
-    "print(f\"Cleaned text — non-empty rate: {non_empty_rate:.2%}\")"
+    "# assert df[\"text_raw_clean\"].isna().sum() == 0, \"NaNs in cleaned content\"\n",
+    "# non_empty_rate = (df[\"text_raw_clean\"].str.len() > 0).mean()\n",
+    "# print(f\"Cleaned text — non-empty rate: {non_empty_rate:.2%}\")"
    ]
   }
  ],
