--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -101,6 +101,260 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "id": "7d51fbe8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from email_security_copilot.data.data import load_data\n",
+    "\n",
+    "df_test = load_data(spam_dir=str(spam_dir), ham_dir=str(ham_dir))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "01b43181",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file</th>\n",
+       "      <th>sender</th>\n",
+       "      <th>recipient</th>\n",
+       "      <th>cc</th>\n",
+       "      <th>num_cc</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>content</th>\n",
+       "      <th>num_hops</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00001.317e78fa8ee2f54cd4890fdc09ba8176</td>\n",
+       "      <td>Start Now &lt;startnow2002@hotmail.com&gt;</td>\n",
+       "      <td>ilug@linux.ie</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>[ILUG] STOP THE MLM INSANITY</td>\n",
+       "      <td>Greetings!\\n\\nYou are receiving this letter be...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>spam</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00002.9438920e9a55591b18e60d1ed37d992b</td>\n",
+       "      <td>lmrn@mailexcite.com</td>\n",
+       "      <td>ranmoore@cybertime.net</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>Real Protection, Stun Guns!  Free Shipping! Ti...</td>\n",
+       "      <td>The Need For Safety Is Real In 2002, You Might...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>spam</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00003.590eff932f8704d8b0fcbe69d023b54d</td>\n",
+       "      <td>amknight@mailexcite.com</td>\n",
+       "      <td>cbmark@cbmark.com</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>New Improved Fat Burners, Now With TV Fat Abso...</td>\n",
+       "      <td>*****Bonus Fat Absorbers As Seen On TV, Includ...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>spam</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00004.bdcc075fa4beb5157b5dd6cd41d8887b</td>\n",
+       "      <td>jordan23@mailexcite.com</td>\n",
+       "      <td>ranmoore@swbell.net</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>New Improved Fat Burners, Now With TV Fat Abso...</td>\n",
+       "      <td>*****Bonus Fat Absorbers As Seen On TV, Includ...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>spam</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00005.ed0aba4d386c5e62bc737cf3f0ed9589</td>\n",
+       "      <td>yyyy@pluriproj.pt</td>\n",
+       "      <td>yyyy@pluriproj.pt</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>Never Repay Cash Grants, $500 - $50,000, Secre...</td>\n",
+       "      <td>Government Grants E-Book 2002\\nedition, Just $...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>spam</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3943</th>\n",
+       "      <td>2547.18ce2b2d4f757e70154b5c8cfe6e684f</td>\n",
+       "      <td>newscientist &lt;rssfeeds@example.com&gt;</td>\n",
+       "      <td>yyyy@example.com</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>Gene technique reveals human evolution</td>\n",
+       "      <td>URL: http://www.newsisfree.com/click/-3,871436...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>ham</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3944</th>\n",
+       "      <td>2548.b2259f104edd1ecbc9dc0327df387147</td>\n",
+       "      <td>guardian &lt;rssfeeds@example.com&gt;</td>\n",
+       "      <td>yyyy@example.com</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>Go-ahead for new-style hospitals</td>\n",
+       "      <td>URL: http://www.newsisfree.com/click/-4,872399...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>ham</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3945</th>\n",
+       "      <td>2549.d05fe143eb28d1fb19fbdc39781d5e34</td>\n",
+       "      <td>newscientist &lt;rssfeeds@example.com&gt;</td>\n",
+       "      <td>yyyy@example.com</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>Malicious code hidden in email software</td>\n",
+       "      <td>URL: http://www.newsisfree.com/click/-3,871080...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>ham</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3946</th>\n",
+       "      <td>2550.963956a866a2e00b3d5b353ecc9216ae</td>\n",
+       "      <td>guardian &lt;rssfeeds@example.com&gt;</td>\n",
+       "      <td>yyyy@example.com</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>'Flexible' retirement gains ground</td>\n",
+       "      <td>URL: http://www.newsisfree.com/click/-4,872400...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>ham</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3947</th>\n",
+       "      <td>2551.3b1f94418de5bd544c977b44bcc7e740</td>\n",
+       "      <td>newscientist &lt;rssfeeds@example.com&gt;</td>\n",
+       "      <td>yyyy@example.com</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>Critical US satellites could be hacked</td>\n",
+       "      <td>URL: http://www.newsisfree.com/click/-3,870882...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>ham</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3948 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        file  \\\n",
+       "0     00001.317e78fa8ee2f54cd4890fdc09ba8176   \n",
+       "1     00002.9438920e9a55591b18e60d1ed37d992b   \n",
+       "2     00003.590eff932f8704d8b0fcbe69d023b54d   \n",
+       "3     00004.bdcc075fa4beb5157b5dd6cd41d8887b   \n",
+       "4     00005.ed0aba4d386c5e62bc737cf3f0ed9589   \n",
+       "...                                      ...   \n",
+       "3943   2547.18ce2b2d4f757e70154b5c8cfe6e684f   \n",
+       "3944   2548.b2259f104edd1ecbc9dc0327df387147   \n",
+       "3945   2549.d05fe143eb28d1fb19fbdc39781d5e34   \n",
+       "3946   2550.963956a866a2e00b3d5b353ecc9216ae   \n",
+       "3947   2551.3b1f94418de5bd544c977b44bcc7e740   \n",
+       "\n",
+       "                                    sender               recipient cc  num_cc  \\\n",
+       "0     Start Now <startnow2002@hotmail.com>           ilug@linux.ie          0   \n",
+       "1                      lmrn@mailexcite.com  ranmoore@cybertime.net          0   \n",
+       "2                  amknight@mailexcite.com       cbmark@cbmark.com          0   \n",
+       "3                  jordan23@mailexcite.com     ranmoore@swbell.net          0   \n",
+       "4                        yyyy@pluriproj.pt       yyyy@pluriproj.pt          0   \n",
+       "...                                    ...                     ... ..     ...   \n",
+       "3943   newscientist <rssfeeds@example.com>        yyyy@example.com          0   \n",
+       "3944       guardian <rssfeeds@example.com>        yyyy@example.com          0   \n",
+       "3945   newscientist <rssfeeds@example.com>        yyyy@example.com          0   \n",
+       "3946       guardian <rssfeeds@example.com>        yyyy@example.com          0   \n",
+       "3947   newscientist <rssfeeds@example.com>        yyyy@example.com          0   \n",
+       "\n",
+       "                                                subject  \\\n",
+       "0                          [ILUG] STOP THE MLM INSANITY   \n",
+       "1     Real Protection, Stun Guns!  Free Shipping! Ti...   \n",
+       "2     New Improved Fat Burners, Now With TV Fat Abso...   \n",
+       "3     New Improved Fat Burners, Now With TV Fat Abso...   \n",
+       "4     Never Repay Cash Grants, $500 - $50,000, Secre...   \n",
+       "...                                                 ...   \n",
+       "3943             Gene technique reveals human evolution   \n",
+       "3944                   Go-ahead for new-style hospitals   \n",
+       "3945            Malicious code hidden in email software   \n",
+       "3946                 'Flexible' retirement gains ground   \n",
+       "3947             Critical US satellites could be hacked   \n",
+       "\n",
+       "                                                content  num_hops label  \n",
+       "0     Greetings!\\n\\nYou are receiving this letter be...         6  spam  \n",
+       "1     The Need For Safety Is Real In 2002, You Might...         3  spam  \n",
+       "2     *****Bonus Fat Absorbers As Seen On TV, Includ...         3  spam  \n",
+       "3     *****Bonus Fat Absorbers As Seen On TV, Includ...         4  spam  \n",
+       "4     Government Grants E-Book 2002\\nedition, Just $...         4  spam  \n",
+       "...                                                 ...       ...   ...  \n",
+       "3943  URL: http://www.newsisfree.com/click/-3,871436...         3   ham  \n",
+       "3944  URL: http://www.newsisfree.com/click/-4,872399...         3   ham  \n",
+       "3945  URL: http://www.newsisfree.com/click/-3,871080...         3   ham  \n",
+       "3946  URL: http://www.newsisfree.com/click/-4,872400...         3   ham  \n",
+       "3947  URL: http://www.newsisfree.com/click/-3,870882...         3   ham  \n",
+       "\n",
+       "[3948 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "id": "e8ac0a73",
    "metadata": {},
